--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malvin-MD-BOT Pair</title>
+  <title>Naruto-MD-BOT Pair</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -13,7 +13,7 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
-      background: url('https://files.catbox.moe/9pfxrj.jpg') no-repeat center center fixed;
+      background: url('https://i.imgur.com/HO8U7W1.jpeg') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Roboto', sans-serif;
       color: #ffffff;
@@ -174,7 +174,7 @@
       <br>
       <p>⚙Enter your number with country code.⚙</p>
       <div class="input-container">
-        <input type="tel" id="number" placeholder="+26371xxxxxxxx" />
+        <input type="tel" id="number" placeholder="+23490xxxxxxxx" />
         <button id="submit">
           <i class="fas fa-paper-plane"></i> Submit
         </button>
@@ -189,7 +189,7 @@
       <div id="expiration-text" class="expiration-text"></div>
     </div>
     <div class="footer">
-      Powered by Malvin King 💡
+      Powered by Destiny Tech 💡
     </div>
   </div>
 
