--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <br>
       <p>⚙Enter your number with country code.⚙</p>
       <div class="input-container">
-        <input type="tel" id="number" placeholder="+26371xxxxxxxx" />
+        <input type="tel" id="number" placeholder="+23490xxxxxxxx" />
         <button id="submit">
           <i class="fas fa-paper-plane"></i> Submit
         </button>
@@ -189,7 +189,7 @@
       <div id="expiration-text" class="expiration-text"></div>
     </div>
     <div class="footer">
-      Powered by MALVIN MD 💡
+      Powered by NARUTO MD 💡
     </div>
   </div>
 
